# ai-python

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml  runtests
.github/: release.yml
.github/workflows/: changelog-label.yml  ci.yml
docs/ai-python/: AGENTS.md  geistdocs.tsx  package.json  pnpm-lock.yaml
examples/: README.md  agent_hooks_inline.py  agent_telemetry.py  builtin_web_search.py  check-examples.py  check_connection.py  coding_agent_minimal.py  explicit_client.py  openai_chat_completions.py  prompt_caching.py  read_file_tool.py  run-examples.py  stream_all.py
examples/.test_scripts/: check-examples.py  run-examples.py  run-with-patched-model.py
examples/agents/: agent_hooks.py  agent_hooks_serverless.py  basic.py  content_tool.py  custom_hook.py  custom_loop.py  mcp_tools.py  read_file_tool.py  streaming_tool.py  subagent.py  telemetry.py  tool_approval.py
examples/agents3/: custom_loop.py
examples/agents3-temporal/: direct.py  main.py  provider.py  pyproject.toml
examples/apps/coding_agent/: README.md  main.py  pyproject.toml
examples/apps/durable_agent_temporal/backend/: pyproject.toml
examples/apps/durable_agent_temporal/backend/app/: __init__.py  server.py  worker.py
examples/apps/durable_agent_workflows/backend/: pyproject.toml
examples/apps/durable_agent_workflows/backend/app/: __init__.py  server.py  worker.py
examples/apps/durable_agent_workflows/backend/workflow_agent/: __init__.py  turn.py
examples/apps/slack_agent/: README.md  main.py  manifest.json  pyproject.toml
examples/coding-agent/: 1_raw_stream.py
examples/fastapi-vite/: .gitignore
examples/media/: image_edit.py  image_generation.py  inline_image.py  multimodal_input.py  video_generation.py
examples/models/: check_connection.py  prompt_caching.py  stream.py  structured_output.py  tools_schema.py
examples/multiagent-textual/: pyproject.toml  server.py
examples/samples/: agent_custom_loop.py  agent_hooks.py  agent_hooks_serverless.py  check_connection.py  explicit_client.py  model_params.py
examples/tau-agent/: pyproject.toml  session.py  tau.py
examples/temporal-direct/: main.py  pyproject.toml  test_durability.py
examples/temporal-durable/: direct.py  provider.py
examples/temporal-middleware/: main.py
skills/ai/: SKILL.md
skills/ai-python-ai-sdk-ui-adapter/: SKILL.md
skills/ai-python-basics/: SKILL.md
skills/ai-python-custom-loop/: SKILL.md
skills/ai-python-custom-provider/: SKILL.md
skills/ai-python-durable-execution/: SKILL.md
skills/ai-python-serverless-execution/: SKILL.md
skills/ai-python-streaming-tools/: SKILL.md
skills/ai-python-subagents/: SKILL.md
skills/ai-python-telemetry/: SKILL.md
skills/ai-python-ui-adapter/: SKILL.md
skills/ai_sdk_ui_adapter/: SKILL.md
skills/custom_loop/: SKILL.md
skills/custom_provider/: SKILL.md
skills/durable_execution/: SKILL.md
skills/serverless_execution/: SKILL.md
skills/streaming_tools/: SKILL.md
skills/subagents/: SKILL.md
src/ai/: __init__.py  _modelsdev.py  _types.py  errors.py  middleware.py  testing.py  type_utils.py  util.py
src/vercel_ai_sdk/: _durability.py
tests/: conftest.py  test_middleware.py  test_testing.py  test_type_utils.py  test_util.py
(+398 files in other folders)
