[project]
name = "temporal-direct"
version = "0.1.0"
description = "Durable agent with a custom loop — every I/O call is a Temporal activity"
requires-python = ">=3.12"
dependencies = [
    "ai",
    "temporalio>=1.9.0",
]

[tool.uv]
exclude-newer = "2 days"

[tool.uv.sources]
ai = { path = "../..", editable = true }
