[project]
name = "coding-agent"
version = "0.1.0"
description = "Minimal coding-agent TUI using the AI SDK for Python and Textual"
requires-python = ">=3.12"
dependencies = [
    "ai",
    "rich>=14.0",
    "textual>=8.2",
]

[tool.uv]
exclude-newer = "2 days"

[tool.uv.sources]
ai = { path = "../../..", editable = true }
